WIP: Use OVS 2.9.2 for fluorine sfc csit
Change-Id: I6575f785edd178fef1677b33b09f3018a5ff8e43
Signed-off-by: Jaime Caamaño Ruiz <jcaamano@suse.com>

--- a/csit/suites/sfc/Full_Deploy/Dockerfile
+++ b/csit/suites/sfc/Full_Deploy/Dockerfile
@@ -1,6 +1,8 @@
 FROM socketplane/busybox:latest
 MAINTAINER The SocketPlane Team <support@socketplane.io>
-ENV OVS openvswitch_2.6.1
+ARG OVS_VERSION
+
+ENV OVS openvswitch_${OVS_VERSION}
 
 # Configure supervisord
 RUN mkdir -p /var/log/supervisor/
