change `test-run` from keyword to integer in config file
Change-Id: Ib519b4517098e73e8ef2b2c0b4c84be0307c4eaf
Signed-off-by: Dibya Prakash Das <dibyadascool@gmail.com>

--- a/dashboard/viz_config.yaml
+++ b/dashboard/viz_config.yaml
@@ -23,7 +23,7 @@ opendaylight-test-feature:
             schema: metric
             value_axis: 1
         build:
-            field: performance.test-run.keyword
+            field: performance.test-run
             label: Build Number
             schema: segment
             not_in_seriesParams: true
@@ -43,7 +43,7 @@ opendaylight-test-performance:
             value_axis: 1
     aggs:
         build:
-            field: performance.test-run.keyword
+            field: performance.test-run
             custom_label: Build Number
             schema: segment
         default:
