add support for colors in plots
Change-Id: I87be96f0f807109e28e94af8642a40239dc4620f
Signed-off-by: Dibya Prakash Das <dibyadascool@gmail.com>

--- a/dashboard/dash_config.yaml
+++ b/dashboard/dash_config.yaml
@@ -31,12 +31,15 @@ dashboard:
           1:
             field: performance.plots.rate.Config DS
             label: Config DS
+            color: red
           2:
             field: performance.plots.rate.OVS Switch
             label: OVS Switch
+            color: yellow
           3:
             field:  performance.plots.rate.Operational DS
             label: Operational DS
+            color: blue
 
       co_ords:
         h: 3
