Add support for filter
The data in the visualization can now be filtered
by field name and value

Change-Id: I630912547ec9777895b20086a0c99e7a9c0af40f
Signed-off-by: Dibya Prakash Das <dibyadascool@gmail.com>

--- a/dashboard/dash_config.yaml
+++ b/dashboard/dash_config.yaml
@@ -37,7 +37,10 @@ dashboard:
           3:
             field:  performance.plots.rate.Operational DS
             label: Operational DS
-
+      filter:
+          1:
+            field: performance.test-name
+            match-with: openflowplugin-csit-1node-perf-bulkomatic-only-oxygen
       co_ords:
         h: 3
         w: 6
@@ -63,6 +66,10 @@ dashboard:
           3:
             field:  performance.plots.time.Operational DS
             label: Operational DS
+      filter:
+          1:
+            field: performance.test-name
+            match-with: openflowplugin-csit-1node-perf-bulkomatic-only-oxygen
       co_ords:
         h: 3
         w: 12
